<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Topbar="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_bg"
    android:orientation="vertical">

    <com.example.air.wandou.widget.Topbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        Topbar:isShowSearchView="false"
        Topbar:title="@string/Mine"></com.example.air.wandou.widget.Topbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_login_before"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="?attr/colorPrimary"
                    android:gravity="center_vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img_account_avatar1"
                            android:layout_width="@dimen/avatar_width"
                            android:layout_height="@dimen/avatar_height"
                            android:layout_alignParentLeft="true"
                            android:src="@drawable/ic_default_avatar"/>

                        <TextView
                            android:id="@+id/txt_account_name1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_minor"
                            android:layout_toEndOf="@+id/img_account_avatar1"
                            android:layout_toRightOf="@+id/img_account_avatar1"
                            android:text="@string/to_login"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="?android:attr/textColorPrimaryInverse"
                            android:textSize="@dimen/font_large"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/txt_account_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@id/txt_account_name1"
                            android:layout_below="@id/txt_account_name1"
                            android:layout_toRightOf="@id/img_account_avatar1"
                            android:text="登录查看个人信息"
                            android:textColor="?android:attr/textColorPrimaryInverse"
                            android:textSize="@dimen/font_normal"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="20dp"
                            android:src="@mipmap/ic_arrow_right_white"/>
                    </RelativeLayout>

                </LinearLayout>

            </FrameLayout>

            <com.example.air.wandou.widget.section.SectionTextItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:siv_icon="@mipmap/ic_account_balance"
                app:siv_indicator="true"
                app:siv_name="@string/my_wallet"/>

            <com.example.air.wandou.widget.section.SectionListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_minor">

                <com.example.air.wandou.widget.section.SectionTextItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:siv_icon="@mipmap/ic_thumbup"
                    app:siv_indicator="true"
                    app:siv_name="@string/my_friend">

                </com.example.air.wandou.widget.section.SectionTextItemView>

            </com.example.air.wandou.widget.section.SectionListView>

            <com.example.air.wandou.widget.section.SectionListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_minor">

                <com.example.air.wandou.widget.section.SectionTextItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:siv_icon="@mipmap/ic_assignment"
                    app:siv_indicator="true"
                    app:siv_name="@string/my_orders"/>

                <com.example.air.wandou.widget.section.SectionTextItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:siv_icon="@mipmap/ic_description"
                    app:siv_indicator="true"
                    app:siv_name="@string/detailed_list"/>

                <com.example.air.wandou.widget.section.SectionTextItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:siv_icon="@mipmap/ic_creditcard"
                    app:siv_indicator="true"
                    app:siv_name="@string/my_BankCard"/>

                <com.example.air.wandou.widget.section.SectionTextItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:siv_icon="@mipmap/ic_favorite"
                    app:siv_indicator="true"
                    app:siv_name="@string/my_favorite"/>

            </com.example.air.wandou.widget.section.SectionListView>

            <com.example.air.wandou.widget.section.SectionListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_minor">

                <com.example.air.wandou.widget.section.SectionTextItemView
                    android:id="@+id/setings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:siv_icon="@mipmap/ic_settings"
                    app:siv_indicator="true"
                    app:siv_name="@string/title_setting"/>

            </com.example.air.wandou.widget.section.SectionListView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/mine_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/user"/>

                    <RadioButton
                        android:id="@+id/mine_business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        />
                </RadioGroup>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>